--- a/layouts/shortcodes/img-post.html
+++ b/layouts/shortcodes/img-post.html
@@ -61,7 +61,7 @@
             <img src="{{ $path }}/{{ $file }}" alt="{{ $alt }}">
         </span>
     {{ else }}
-        <p><span class="image center">
+        <p><span class="image">
             <img src="{{ $path }}/{{ $file }}" alt="{{ $alt }}">
         </span></p>
     {{ end }}
