--- a/layouts/partials/sidebar.html
+++ b/layouts/partials/sidebar.html
@@ -138,7 +138,7 @@
           {{ .Site.Title }}
         {{ end }}
       {{end}}.
-      Powered by <a href="//gohugo.io" target="_blank">Hugo</a>
+      Developed by <a href="navdevl.xyz" target="_blank">navdevl</a>
     </p>
   </section>
 </section>
