Updated about contents
Signed-off-by: Naveen Honest Raj <naveen@skcript.com>

--- a/layouts/partials/sidebar.html
+++ b/layouts/partials/sidebar.html
@@ -138,7 +138,7 @@
           {{ .Site.Title }}
         {{ end }}
       {{end}}.
-      Developed by <a href="navdevl.xyz" target="_blank">navdevl</a>
+      Developed by <a href="https://navdevl.xyz" target="_blank">Navdevl</a>
     </p>
   </section>
 </section>
