--- a/layouts/post/content-list.html
+++ b/layouts/post/content-list.html
@@ -7,6 +7,6 @@
     <ul class="actions">
       <li><a href="{{ .RelPermalink }}" class="button big">Continue Reading</a></li>
     </ul>
-  {{ .Render "footer-category" }}
+  <!-- {{ .Render "footer-category" }} -->
   </footer>
 </article>
