--- a/layouts/partials/meta.html
+++ b/layouts/partials/meta.html
@@ -30,14 +30,14 @@
 {{ end }} 
 
 {{ with .Params.featured }}
-  <meta itemprop="image" content="{{ . }}">
-  <meta property="og:image" content="{{ . }}">
-  <meta name="twitter:image" content="{{ . }}">
+  <meta itemprop="image" content="{{ . | absURL }}">
+  <meta property="og:image" content="{{ . | absURL }}">
+  <meta name="twitter:image" content="{{ . | absURL }}">
   {{ else }} 
 {{ with .Site.Params.og_image }}
-  <meta itemprop="image" content="{{ . }}">
-  <meta property="og:image" content="{{ . }}">
-  <meta name="twitter:image" content="{{ . }}">
+  <meta itemprop="image" content="{{ . | absURL }}">
+  <meta property="og:image" content="{{ . | absURL }}">
+  <meta name="twitter:image" content="{{ . | absURL }}">
   {{ end }} 
 {{ end }} 
 
