--- a/layouts/partials/meta.html
+++ b/layouts/partials/meta.html
@@ -30,16 +30,21 @@
 {{ end }} 
 
 {{ with .Params.featured }}
-  <meta itemprop="image" content="{{ . | absURL }}">
-  <meta property="og:image" content="{{ . | absURL }}">
-  <meta name="twitter:image" content="{{ . | absURL }}">
+  <meta itemprop=image content="{{ . | absURL }}">
+  <meta name=twitter:image:src content="{{ . | absURL }}">
+  <meta property=og:image content="{{ . | absURL }}">
+  <meta itemprop=image content="{{ . | absURL }}">
+  <meta name=twitter:image content="{{ . | absURL }}">
   {{ else }} 
 {{ with .Site.Params.og_image }}
-  <meta itemprop="image" content="{{ . | absURL }}">
-  <meta property="og:image" content="{{ . | absURL }}">
-  <meta name="twitter:image" content="{{ . | absURL }}">
+  <meta itemprop=image content="{{ . | absURL }}">
+  <meta name=twitter:image:src content="{{ . | absURL }}">
+  <meta property=og:image content="{{ . | absURL }}">
+  <meta itemprop=image content="{{ . | absURL }}">
+  <meta name=twitter:image content="{{ . | absURL }}">
   {{ end }} 
 {{ end }} 
+
 
 <!-- URL -->
 <link rel="canonical" href="{{ .Permalink }}">
