--- a/layouts/post/comments.html
+++ b/layouts/post/comments.html
@@ -1,5 +1,5 @@
 {{ if ne .Site.DisqusShortname "" }}
-  {{ if eq .Title .Site.Title }} 
+  {{ if ne .Title .Site.Title }} 
     <article class="post">
         {{ template "_internal/disqus.html" . }}
     </article>
