--- a/layouts/partials/seo_schema.html
+++ b/layouts/partials/seo_schema.html
@@ -12,14 +12,14 @@
   "description": "{{ if .Description }}{{ .Description }}{{ else }}{{if .IsPage}}{{ .Summary }}{{ end }}{{ end }}",
   "inLanguage": "{{ .Lang }}",
   "author": "{{ range .Site.Author }}{{ . }}{{ end }}",
-  "creator": "{{ range .Site.Author }}{{ . }}{{ end }}",
-  "publisher": "{{ range .Site.Author }}{{ . }}{{ end }}",
+  "creator": "{{ range .Site.Author }}{{ . }}{{ end }}",,
   "accountablePerson": "{{ range .Site.Author }}{{ . }}{{ end }}",
   "copyrightHolder": "{{ range .Site.Author }}{{ . }}{{ end }}",
   "copyrightYear": "{{ .Date.Format "2006" }}",
   "datePublished": "{{ .Date }}",
   "dateModified": "{{ .Date }}",
   "url": "{{ .Permalink }}",
-  "wordCount": "{{ .WordCount }}"
+  "wordCount": "{{ .WordCount }}",
+  "image": "{{ .Site.Params.og_image }}"
 }
 </script>
