--- a/layouts/partials/seo_schema.html
+++ b/layouts/partials/seo_schema.html
@@ -12,7 +12,7 @@
   "description": "{{ if .Description }}{{ .Description }}{{ else }}{{if .IsPage}}{{ .Summary }}{{ end }}{{ end }}",
   "inLanguage": "{{ .Lang }}",
   "author": "{{ range .Site.Author }}{{ . }}{{ end }}",
-  "creator": "{{ range .Site.Author }}{{ . }}{{ end }}",,
+  "creator": "{{ range .Site.Author }}{{ . }}{{ end }}",
   "accountablePerson": "{{ range .Site.Author }}{{ . }}{{ end }}",
   "copyrightHolder": "{{ range .Site.Author }}{{ . }}{{ end }}",
   "copyrightYear": "{{ .Date.Format "2006" }}",
