--- a/layouts/partials/seo_schema.html
+++ b/layouts/partials/seo_schema.html
@@ -20,6 +20,6 @@
   "dateModified": "{{ .Date }}",
   "url": "{{ .Permalink }}",
   "wordCount": "{{ .WordCount }}",
-  "image": "{{ .Site.Params.og_image }}"
+  "image": "{{ .Site.Params.og_image | absURL }}"
 }
 </script>
