--- a/layouts/partials/seo_schema.html
+++ b/layouts/partials/seo_schema.html
@@ -13,7 +13,10 @@
   "inLanguage": "{{ .Lang }}",
   "author": "{{ range .Site.Author }}{{ . }}{{ end }}",
   "creator": "{{ range .Site.Author }}{{ . }}{{ end }}",
-  "publisher": "{{ range .Site.params.Author }}{{ . }}{{ end }}",
+  "publisher": {
+    "@type": "Organization",
+    "name": "Turbo Hustle"
+  },
   "accountablePerson": "{{ range .Site.Author }}{{ . }}{{ end }}",
   "copyrightHolder": "{{ range .Site.Author }}{{ . }}{{ end }}",
   "copyrightYear": "{{ .Date.Format "2006" }}",
