--- a/layouts/index.html
+++ b/layouts/index.html
@@ -4,7 +4,7 @@
     <!-- Main -->
     <div id="main">
         {{ range first 1 (where .Site.Pages "Type" "post") }}
-            {{ .Render "content-preview" }}
+            {{ .Render "content-single" }}
 
             {{ partial "share-menu" . }}
         {{ end }}
